--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -28,7 +28,7 @@
   },
   "vars": {
     "DEBUG_MODE": "false",
-        "PROXY_URLS": "https://xdpl6-tau.vercel.app/jsonrpc, https://xdpl5-nine.vercel.app/jsonrpc, https://xdpl4-six.vercel.app/jsonrpc, https://xdpl3-beta.vercel.app/jsonrpc, https://xdpl1-hazel.vercel.app/jsonrpc, https://xdpl2-eta.vercel.app/jsonrpc, https://0.xdpl.xixu.dpdns.org/jsonrpc,https://1.xdpl.xixu.dpdns.org/jsonrpc,https://2.xdpl.xixu.dpdns.org/jsonrpc,https://3.xdpl.xixu.dpdns.org/jsonrpc,https://4.xdpl.xixu.dpdns.org/jsonrpc,https://5.xdpl.xixu.dpdns.org/jsonrpc,https://6.xdpl.xixu.dpdns.org/jsonrpc,https://7.xdpl.xixu.dpdns.org/jsonrpc,https://8.xdpl.xixu.dpdns.org/jsonrpc,https://9.xdpl.xixu.dpdns.org/jsonrpc"
+        "PROXY_URLS": "https://xdpl6-tau.vercel.app/jsonrpc, https://xdpl5-nine.vercel.app/jsonrpc, https://xdpl4-six.vercel.app/jsonrpc, https://xdpl3-beta.vercel.app/jsonrpc, https://xdpl1-hazel.vercel.app/jsonrpc, https://xdpl2-eta.vercel.app/jsonrpc"
   },
   "workers_dev": true
 }
