--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -28,7 +28,7 @@
   },
   "vars": {
     "DEBUG_MODE": "false",
-        "PROXY_URLS": "https://xdpl6-tau.vercel.app/jsonrpc, https://xdpl5-nine.vercel.app/jsonrpc, https://xdpl4-six.vercel.app/jsonrpc, https://xdpl3-beta.vercel.app/jsonrpc, https://xdpl1-hazel.vercel.app/jsonrpc, https://xdpl2-eta.vercel.app/jsonrpc"
+        "PROXY_URLS": "https://xdpl10.vercel.app/jsonrpc, https://xdpl9-sable.vercel.app/jsonrpc, https://xdpl8-six.vercel.app/jsonrpc, https://xdpl7-omega.vercel.app/jsonrpc, https://xdpl6-tau.vercel.app/jsonrpc, https://xdpl5-nine.vercel.app/jsonrpc, https://xdpl4-six.vercel.app/jsonrpc, https://xdpl3-beta.vercel.app/jsonrpc, https://xdpl1-hazel.vercel.app/jsonrpc, https://xdpl2-eta.vercel.app/jsonrpc"
   },
   "workers_dev": true
 }
