--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -28,17 +28,8 @@
   },
   "vars": {
     "DEBUG_MODE": "false",
-"PROXY_URLS": [
-  "https://new1-ruby.vercel.app/jsonrpc",
-  "https://new2-umber-six.vercel.app/jsonrpc",
-  "https://new3-rho-seven.vercel.app/jsonrpc",
-  "https://new4-beige.vercel.app/jsonrpc",
-  "https://new5-lilac.vercel.app/jsonrpc",
-  "https://new6-nine.vercel.app/jsonrpc",
-  "https://new7-beryl.vercel.app/jsonrpc",
-  "https://new8-six.vercel.app/jsonrpc",
-  "https://new9-puce.vercel.app/jsonrpc"
-]
+"PROXY_URLS":
+  "https://new1-ruby.vercel.app/jsonrpc", "https://new2-umber-six.vercel.app/jsonrpc", "https://new3-rho-seven.vercel.app/jsonrpc", "https://new4-beige.vercel.app/jsonrpc", "https://new5-lilac.vercel.app/jsonrpc", "https://new6-nine.vercel.app/jsonrpc", "https://new7-beryl.vercel.app/jsonrpc", "https://new8-six.vercel.app/jsonrpc", "https://new9-puce.vercel.app/jsonrpc"
 },
   "workers_dev": true
 }
