--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -27,7 +27,7 @@
     "crons": ["*/5 * * * *"]
   },
 "vars": {
-  "DEBUG_MODE": "false",
+  "DEBUG_MODE": "true",
   "PROXY_URLS": "https://xdpl10.vercel.app/jsonrpc,https://xdpl9-sable.vercel.app/jsonrpc,https://xdpl8-six.vercel.app/jsonrpc,https://xdpl7-omega.vercel.app/jsonrpc,https://xdpl6-tau.vercel.app/jsonrpc,https://xdpl5-nine.vercel.app/jsonrpc,https://xdpl4-six.vercel.app/jsonrpc,https://xdpl3-beta.vercel.app/jsonrpc,https://xdpl1-hazel.vercel.app/jsonrpc,https://xdpl2-eta.vercel.app/jsonrpc,https://new1-ruby.vercel.app/jsonrpc,https://new2-umber-six.vercel.app/jsonrpc,https://new3-rho-seven.vercel.app/jsonrpc,https://new4-beige.vercel.app/jsonrpc,https://new5-lilac.vercel.app/jsonrpc,https://new6-nine.vercel.app/jsonrpc,https://new7-beryl.vercel.app/jsonrpc,https://new8-six.vercel.app/jsonrpc,https://new9-puce.vercel.app/jsonrpc"
   },
   "workers_dev": true
